[package]
name = "rpm-utils"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
num-derive = "0.4"
num-traits = "0.2"
strum_macros = "0.27.1"
chrono = "0.4"
itertools = "0.14"
flate2 = "1"
bzip2 = "0.4"
zstd = "0.13"
xz2 = "0.1"
hex = "0.4"
filetime = "0.2"
omnom = "3"
hostname = "0.3"
bitflags = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "fs"] }
